corrected the font-weight of the custom-header class and added animations to carousel on small device and changed display of custom-btn to block

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -75,6 +75,7 @@ a:active, a:hover {
 .custom-header {
   font-size: 52px;
   font-family: var(--header-font);
+  font-weight: bold;
   line-height: 80px;
   letter-spacing: 2px;
 }
@@ -109,6 +110,7 @@ a:active, a:hover {
 }
 
 .custom-btn {
+  display: block;
   width: 170px;
   padding: 15px;
   border: none;
@@ -226,6 +228,7 @@ nav.navbar {
   justify-content: center;
   padding-left: 100px;
   background: url('../images/web/16.png') no-repeat center center;
+  background-size: cover;
   height: 770px;
   margin-bottom: 0;
 }
@@ -250,7 +253,7 @@ nav.navbar {
   font-size: 16px !important;
   line-height: 20px !important;
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -284,7 +287,7 @@ nav.navbar {
 }
 
 .display-4 {
-  width: 50%;
+  width: 60%;
 }
 
 .modal-dialog {
